Lb 7 some fixes

--- a/AirTry/AirTry.vcxproj.filters
+++ b/AirTry/AirTry.vcxproj.filters
@@ -77,6 +77,9 @@
     <ClInclude Include="protocol.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="TCAS.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
