--- a/AirTry/AirTry.vcxproj
+++ b/AirTry/AirTry.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="model.h" />
     <ClInclude Include="OPS.h" />
     <ClInclude Include="protocol.h" />
+    <ClInclude Include="TCAS.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
