--- a/AirTry/AirTry.vcxproj.filters
+++ b/AirTry/AirTry.vcxproj.filters
@@ -80,6 +80,9 @@
     <ClInclude Include="TCAS.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Ellipse.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
